light_clone/tests/ui/union_not_supported.stderr
error: LightClone derive is not supported for unions.
 --> tests/ui/union_not_supported.rs:4:7
  |
4 | union MyUnion {
  |       ^^^^^^^
