light_clone/tests/ui/union_not_supported.rs
use light_clone::LightClone;

#[derive(LightClone)]
union MyUnion {
    a: i32,
    b: f32,
}

fn main() {}
